Fin del proyecto

--- a/html/juego.html
+++ b/html/juego.html
@@ -41,7 +41,7 @@
         <!-- seccion del juego -->
         <div class="juego ">
             <!-- seccion del ahorcadito -->
-            <div class="ahorcado">
+            <div class="ahorcado" data-ahorcado>
 
             </div>
             <!-- seccion de las palabras -->
@@ -52,17 +52,19 @@
         <!-- seccion de los botones -->
         <div class="mt-2">
             <div class="botones">
-                <button type="button" class="btn btn-success btn-lg bton" data-add>Nuevo juego</button>
-                <button type="button" class="btn btn-warning btn-lg bton" data-start>Desistir</button>
+                <button type="button" class="btn btn-success btn-lg bton" data-nuevo>Nuevo juego</button>
+                <a href="../index.html">
+                    <button type="button" class="btn btn-warning btn-lg bton" data-stop>Desistir</button>
+                </a>
             </div>
         </div>
 
-    <!-- footer -->
-    <footer>
-        
-    </footer>
-    <script src="../javascript/agregar.js" type="module"></script>
+        <!-- footer -->
+        <footer>
+
+        </footer>
+        <script src="../javascript/agregar.js"></script>
+
 </body>
 
 </html>
-
