--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
         <!-- seccion de los botones -->
         <div class="mt-2">
             <div class="botones">
-                <button type="button" class="btn btn-success btn-lg bton">Iniciar Juego</button>
+            <a href="./html/juego.html">
+                <button type="button" class="btn btn-success btn-lg bton1">Iniciar Juego</button>
+            </a>
                 <a href="./html/agregar.html">
                     <button type="button" class="btn btn-info btn-lg bton"> Agregar nueva Palabra</button>
                 </a>
