--- a/html/agregar.html
+++ b/html/agregar.html
@@ -50,9 +50,11 @@
             <div class="botones">
                 <button type="button" class="btn btn-success btn-lg bton" data-add>Guardar </button>
                 <a href="./juego.html">
-                    <button type="button" class="btn btn-warning btn-lg bton" data-start>Empezar</button>
+                    <button type="button" class="btn btn-warning btn-lg bton">Empezar</button>
                 </a>
+                <a href="../index.html">
                 <button type="button" class="btn btn-info btn-lg bton">Cancelar</button>
+            </a>
             </div>
         </div>
 
@@ -62,7 +64,7 @@
 
     </footer>
     <!-- Javascript -->
-    <script src="../javascript/agregar.js" type="module"></script>
+    <script src="../javascript/agregar.js" ></script>
 </body>
 
 </html>
