--- a/html/agregar.html
+++ b/html/agregar.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.2.2/darkly/bootstrap.min.css"
         integrity="sha512-8RiGzgobZQmqqqJYja5KJzl9RHkThtwqP1wkqvcbbbHNeMXJjTaBOR+6OeuoxHhuDN5h/VlgVEjD7mJu6KNQXA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -44,27 +46,35 @@
             <input type="text" class="input" data-text>
         </div>
         <!-- seccion de los botones -->
-        <div class="mt-2">
-            <label for="" class="sentens"> <i class="bi bi-exclamation-lg">
-                    <img src="../img/alert.svg" alt="alert"> Max. 8 letras</label>
+        <div class="mt-2 div1">
+            <label for="" class="sentens"> <i class="bi bi-exclamation-diamond-fill bi2"></i> Max. 8 letras</label>
             <div class="botones">
                 <button type="button" class="btn btn-success btn-lg bton" data-add>Guardar </button>
                 <a href="./juego.html">
                     <button type="button" class="btn btn-warning btn-lg bton">Empezar</button>
                 </a>
                 <a href="../index.html">
-                <button type="button" class="btn btn-info btn-lg bton">Cancelar</button>
-            </a>
+                    <button type="button" class="btn btn-info btn-lg bton">Cancelar</button>
+                </a>
             </div>
         </div>
 
     </div>
     <!-- footer -->
-    <footer>
 
+    <footer>
+        <p class="bi1">&copy; Alejandra Orrego</p>
+        <div class="enlaces">
+            <a href="https://www.facebook.com/alejandra1higuita" target="_blank" rel="noopener noreferrer"><i
+                    class="bi bi-facebook bi1"></i></a>
+            <a href="https://github.com/alejamundo?tab=repositories" target="_blank" rel="noopener noreferrer"><i
+                    class="bi bi-github bi1"></i>
+            </a>
+        </div>
     </footer>
+
     <!-- Javascript -->
-    <script src="../javascript/agregar.js" ></script>
+    <script src="../javascript/agregar.js"></script>
 </body>
 
 </html>
