--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.2.2/darkly/bootstrap.min.css"
         integrity="sha512-8RiGzgobZQmqqqJYja5KJzl9RHkThtwqP1wkqvcbbbHNeMXJjTaBOR+6OeuoxHhuDN5h/VlgVEjD7mJu6KNQXA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -55,8 +56,14 @@
 
     </div>
     <!-- footer -->
-    <footer>
-        
+    <footer >
+        <p class="bi1">&copy; Alejandra Orrego</p>
+        <div class="enlaces">
+            <a href="https://www.facebook.com/alejandra1higuita" target="_blank" rel="noopener noreferrer"><i class="bi bi-facebook bi1"></i></a>
+            <a href="https://github.com/alejamundo?tab=repositories" target="_blank" rel="noopener noreferrer"><i class="bi bi-github bi1"></i>
+            </a>
+        </div>
+       
     </footer>
 </body>
 
